Fix logic issue and add console output
Finilized the program by fixing issues with loops and added some text to make the game mroe readable.

--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <title>Document</title>
     <script src="./script.js"></script>
   </head>
-  <body></body>
+  <body>
+    <p>Open your console to follow along the Rock Paper Scisor game</p>
+  </body>
 </html>
