Fix typo on paragraph

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <script src="./script.js"></script>
   </head>
   <body>
-    <p>Open your console to follow along the Rock Paper Scisor game</p>
+    <p>Open your console to follow along the Rock Paper Scissor game</p>
   </body>
 </html>
