--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="./script.js"></script>
   </head>
   <body>
-    <p>Open your console to follow along the Rock Paper Scissor game</p>
+    <button class="button">Rock</button>
+    <button class="button">Paper</button>
+    <button class="button">Scissor</button>
+    <div class="board"></div>
+    <div class="score"></div>
+    <button class="restart">Restart</button>
+    <script src="./script.js"></script>
   </body>
 </html>
