Add more styling and footer
Added more styling to game. Added a footer with my name at the bottom

--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <button class="button">Rock</button>
-    <button class="button">Paper</button>
-    <button class="button">Scissor</button>
-    <div class="board"></div>
-    <div class="score"></div>
-    <button class="restart">Restart</button>
+    <h1 class="title">ROCK PAPER SCISSORS GAME</h1>
+    <div class="choices">
+      <button class="button">Rock</button>
+      <button class="button">Paper</button>
+      <button class="button">Scissor</button>
+    </div>
+    <div class="game-area">
+      <div class="board"></div>
+      <div class="score"></div>
+      <button class="restart">Restart</button>
+    </div>
+    <footer>Made by Zach Poba-Nzaou</footer>
     <script src="./script.js"></script>
   </body>
 </html>
